@startuml productworld
!pragma useIntermediatePackages false

class productworld.base.base.NewOrder {
  order_id: None
  product: Product
  quantity: None
  __init__(self, order_id, Product product, quantity)
  int calculate_total(self, Product product)
}
class productworld.base.base.Order {
  order_id: None
  product: None
  quantity: None
  __init__(self, order_id, Product product, quantity)
  int calculate_total(self)
}
abstract class productworld.base.base.Product {
  product_id: None
  name: None
  __init__(self, product_id, name)
  get_price(self)
}
class productworld.base.customer.Customer {
  customer_id: None
  name: None
  orders: None
  newestOrder: NewOrder
  __init__(self, customer_id, name)
  add_order(self, Order order)
  int get_total_spent(self)
}
class productworld.products.products.DigitalProduct {
  price: None
  discount: None
  __init__(self, product_id, name, price, discount)
  int get_price(self)
}
class productworld.products.products.PhysicalProduct {
  price: None
  __init__(self, product_id, name, price)
  get_price(self)
}
class productworld.products.products.Productfactory {
  PhysicalProduct | DigitalProduct create_product(self, str pid)
}
annotation productworld.base.base.Methods {
  fancyFunc(order: Order')
  funkyFunc()
}
annotation productworld.products.products.Methods {
  PhysicalProduct | DigitalProduct create_product(self: None, pid: 'str')
}
productworld.base.base.NewOrder *-- productworld.base.base.Product
productworld.base.customer.Customer *-- productworld.base.base.NewOrder
productworld.base.base.Product <|-- productworld.products.products.DigitalProduct
productworld.base.base.Product <|-- productworld.products.products.PhysicalProduct
productworld.base.base.NewOrder <-- productworld.base.base.Product
productworld.base.base.Methods <-- productworld.base.base.Order: used by fancyFunc
productworld.base.customer.Customer <-- productworld.base.base.Order
productworld.products.products.Productfactory <-- productworld.products.products.PhysicalProduct
productworld.products.products.Productfactory <-- productworld.products.products.DigitalProduct
productworld.products.products.Methods <-- productworld.products.products.PhysicalProduct: used by create_product
productworld.products.products.Methods <-- productworld.products.products.DigitalProduct: used by create_product
footer Generated by //py2puml//
@enduml
